<resources>
    <string name="app_name">Daily Planner</string>
    <string name="add_note">Add note</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="new_note">New Note</string>
    <string name="title">Title:</string>
    <string name="description">Data:</string>
    <string name="date">Date:</string>
    <string name="repetition">Repetition:</string>
    <string name="ok">OK</string>
    <string name="note_type">Note Type:</string>
    <string name="simple">Simple</string>
    <string name="dated">Dated</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="no_repetition">No repetition</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="edit_note">Edit Note</string>
    <string name="permission_is_required">Permission is required</string>
    <string name="alarm_permission_is_required">Alarm permission is required for scheduling of dated notes</string>
    <string name="cancel">Cancel</string>
    <string name="date_hint">dd.mm.yyyy</string>
    <string name="time_hint">hh:mm</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="incorrect_time">Note’s time must be later than current time</string>
    <string name="time_s_app">Time’s app!</string>
    <string name="notifications_required">Notifications are required for dated notes</string>
    <string name="update_now">Update now</string>
    <string name="later">Later</string>
    <string name="update_available">Update Available</string>
    <string name="specific_time">Specific Time</string>
    <string-array name="note_types">
        <item>Simple</item>
        <item>Dated</item>
    </string-array>
    <string-array name="repetition_type">
        <item>No repetition</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>