<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="view_model"
                type="com.paranid5.daily_planner.presentation.add_note_dialog.AddNoteViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_note"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:layout_gravity="center"
                app:carbon_elevation="20dp"
                app:carbon_elevationAmbientShadowColor="@color/primary_dark"
                app:carbon_elevationShadowColor="@color/primary_dark"
                app:carbon_elevationSpotShadowColor="@color/primary_dark" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/note_type"
                        android:textSize="13sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/title"
                        android:textSize="13sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textSize="13sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/date"
                        android:textSize="13sp"
                        android:visibility="@{view_model.presenter.dateElementsVisibility}"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/repetition"
                        android:textSize="13sp"
                        android:visibility="@{view_model.presenter.dateElementsVisibility}"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">
                <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_input"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:minHeight="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:maxLines="1"
                        android:onTextChanged="@{(txt, start, before, cnt) -> view_model.postTitleInput(txt)}"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:minHeight="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:maxLines="1"
                        android:onTextChanged="@{(txt, start, before, cnt) -> view_model.postDescriptionInput(txt)}"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_picker_launcher"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:minHeight="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:maxLines="1"
                        android:inputType="datetime"
                        android:visibility="@{view_model.presenter.dateElementsVisibility}"/>

                <Spinner
                        android:id="@+id/repetition_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:visibility="@{view_model.presenter.dateElementsVisibility}"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>